--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@
 *.zip
 .vscode
 .idea/
+get-pgn.darwin
+get-pgn.linux
+get-pgn.exe
+get-pgn
+get-li-pgn.darwin
+get-li-pgn.linux
+get-li-pgn.exe
+get-li-pgn
