Ignore all binaries

--- a/get-pgn/Makefile
+++ b/get-pgn/Makefile
@@ -1,19 +1,22 @@
 # Variable section
-GO=go build
+GOBUILD=go build
 GOTGT=-o $@ .
 
+.PHONY: default
+default:
+	${GOBUILD} .
 
 .PHONY: all
 all: get-pgn.darwin get-pgn.linux get-pgn.exe
 
 get-pgn.darwin: main.go
-	GOOS=darwin ${GO} ${GOTGT}
+	GOOS=darwin ${GOBUILD} ${GOTGT}
 
 get-pgn.linux: main.go
-	GOOS=linux ${GO} ${GOTGT}
+	GOOS=linux ${GOBUILD} ${GOTGT}
 
 get-pgn.exe: main.go
-	GOOS=windows ${GO} ${GOTGT}
+	GOOS=windows ${GOBUILD} ${GOTGT}
 
 .PHONY: clean
 clean:
