changed Makefiles to build binaries in bin directory

--- a/get-li-pgn/Makefile
+++ b/get-li-pgn/Makefile
@@ -1,26 +1,23 @@
 # Variable section
 GOBUILD=go build
-GOTGT=-o $@ .
-
-.PHONY: default
-default:
-	${GOBUILD} .
+BINDIR=../bin/
+GOTGT=-o $(BINDIR)$@ .
 
 .PHONY: all
-all: get-li-pgn.darwin get-li-pgn.linux get-li-pgn.exe
+all: $(BINDIR)get-li-pgn.darwin $(BINDIR)get-li-pgn.linux $(BINDIR)get-li-pgn.exe
 
-get-li-pgn.darwin: main.go
+$(BINDIR)get-li-pgn.darwin: main.go
 	GOOS=darwin ${GOBUILD} ${GOTGT}
 
-get-li-pgn.linux: main.go
+$(BINDIR)get-li-pgn.linux: main.go
 	GOOS=linux ${GOBUILD} ${GOTGT}
 
-get-li-pgn.exe: main.go
+$(BINDIR)get-li-pgn.exe: main.go
 	GOOS=windows ${GOBUILD} ${GOTGT}
 
 .PHONY: clean
 clean:
-	-rm -rf get-li-pgn get-li-pgn.darwin get-li-pgn.linux get-li-pgn.exe
+	-cd ../bin; rm -rf get-li-pgn get-li-pgn.darwin get-li-pgn.linux get-li-pgn.exe
 
 .PHONY: clean-all
 clean-all: clean
