--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.darwin filter=lfs diff=lfs merge=lfs -text
 *.linux filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
+*amd64 filter=lfs diff=lfs merge=lfs -text
